@@ -1,3 +1,12 @@
+2007-12-15  Bean  <bean123ch@gmail.com>
+
+	* conf/i386-pc.rmk (pkgdata_IMAGES): Add lnxboot.img.
+	(lnxboot_img_SOURCES): New variable.
+	(lnxboot_img_ASFLAGS): Likewise.
+	(lnxboot_img_LDFLAGS): Likewise.
+
+	* boot/i386/pc/lnxboot.S: New file.
+
 2007-11-24  Pavel Roskin  <proski@gnu.org>
 
 	* configure.ac: Test if '--build-id=none' is supported by the
